--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/red_500</color>
+    <color name="colorPrimaryDark">@color/red_700</color>
+    <color name="colorAccent">@color/light_blue_A700</color>
+    <color name="textColorPrimary">@color/black</color>
+    <color name="textColorSecondary">@color/grey_600</color>
+    <color name="textColorBackground">@color/white</color>
+    <color name="textColorHyperLink">@color/light_blue_A700</color>
+
+    <!-- Red -->
+    <color name="red_500">#F44336</color>
+    <color name="red_700">#D32F2F</color>
+    <color name="light_blue_A700">#0091EA</color>
+    <color name="blue_A700">#2962FF</color>
+    <color name="grey_600">#757575</color>
+
+    <!-- Standard colors -->
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+
+
 </resources>
