--- a/app/src/main/res/xml/pref_general_settings.xml
+++ b/app/src/main/res/xml/pref_general_settings.xml
@@ -1,6 +1,6 @@
 <android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-   <!-- <SwitchPreferenceCompat
+    <SwitchPreferenceCompat
         android:defaultValue="false"
         android:key="@string/pref_tab_layout"
         android:summary="@string/summary_tab_layout"
@@ -50,4 +50,4 @@
             android:title="Contact Us" />
 
     </PreferenceCategory>
---></android.support.v7.preference.PreferenceScreen>
+</android.support.v7.preference.PreferenceScreen>
