--- a/app/src/main/res/menu/activity_base_drawer_main.xml
+++ b/app/src/main/res/menu/activity_base_drawer_main.xml
@@ -28,10 +28,9 @@
             android:id="@+id/nav_mode_subscriptions"
             android:title="@string/title_menu_subscriptions" />
         <item
-            android:id="@+id/nav_mode_night"
+            android:id="@+id/nav_mode_refresh"
             android:enabled="false"
-            android:title="@string/title_menu_mode_night"
-            app:actionLayout="@layout/action_view_switch" />
+            android:title="@string/title_menu_mode_refresh" />
         <item
             android:id="@+id/nav_mode_settings"
             android:title="@string/title_menu_mode_settings" />
