--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="textColorBackground">@color/white</color>
     <color name="textColorHyperLink">@color/light_blue_A700</color>
 
+    <color name="colorBackgroundItemSelected">@color/grey_600</color>
+    <color name="colorBackgroundItemNoSelected">@color/white</color>
+
     <color name="colorBackgroundImage">@color/white</color>
     <color name="colorBackgroundCard">@color/white</color>
 
