--- a/app/src/main/res/layout/list_reddit.xml
+++ b/app/src/main/res/layout/list_reddit.xml
@@ -31,7 +31,7 @@
             android:id="@+id/img_handle"
             android:layout_width="?listPreferredItemHeight"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical|right"
+            android:layout_gravity="center_vertical|end"
             android:scaleType="center" />
 
 
