--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,4 +3,5 @@
     android:id="@+id/fragment_settings_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/settings_margin"
     android:orientation="vertical"/>
