--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="base_navigation_padding_vertical">16dp</dimen>
     <dimen name="base_navigation_padding_horizontal">16dp</dimen>
 
+    <dimen name="settings_margin">16dp</dimen>
 
     <dimen name="list_padding_vertical_title">4dp</dimen>
     <dimen name="list_padding_horizontal_title">8dp</dimen>
