--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,4 +1,7 @@
 <resources>
     <!-- detail -->
     <item name="detail_line_spacing_multiplier_body" format="float" type="fraction">1.1</item>
+
+    <dimen name="settings_margin">16dp</dimen>
+
 </resources>
