--- a/app/src/main/res/menu/activity_base_drawer_main.xml
+++ b/app/src/main/res/menu/activity_base_drawer_main.xml
@@ -25,7 +25,7 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_mode_subscriptions"
-            android:title="@string/title_menu_subscriptions" />
+            android:title="@string/title_menu_managesubs" />
         <item
             android:id="@+id/nav_mode_refresh"
             android:enabled="false"
@@ -33,6 +33,13 @@
         <item
             android:id="@+id/nav_mode_settings"
             android:title="@string/title_menu_mode_settings" />
+
+    </group>
+
+    <group android:id="@+id/subs_drawer_menu">
+        <item
+            android:id="@+id/nav_mode_subs"
+            android:title="@string/title_menu_subscriptions" />
 
     </group>
 
