LOGIN Using OAuth

--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -27,7 +27,7 @@
         android:layout_gravity="start"
         android:layout_marginEnd="?actionBarSize"
         android:fitsSystemWindows="false"
-        app:headerLayout="@layout/nav_header_base" />
-
+         />
+    <!--app:headerLayout="@layout/nav_header_base"-->
 
 </android.support.v4.widget.DrawerLayout>
