--- a/app/src/main/res/layout/nav_header_base.xml
+++ b/app/src/main/res/layout/nav_header_base.xml
@@ -12,12 +12,37 @@
     android:paddingTop="@dimen/base_navigation_padding_vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/image_description_app"
-        android:paddingTop="@dimen/base_navigation_padding_vertical"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/base_navigation_padding_vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/image_description_app"
+            app:srcCompat="@mipmap/ic_launcher_round" />
+
+
+        <TextView
+            android:id="@+id/tv_nav_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/abel"
+            android:paddingBottom="@dimen/base_navigation_padding_vertical"
+            android:paddingEnd="@dimen/base_navigation_padding_horizontal"
+            android:paddingStart="@dimen/base_navigation_padding_horizontal"
+            android:paddingTop="@dimen/base_navigation_padding_vertical"
+            android:text="@string/text_nav_anonymous"
+            android:textStyle="bold|italic"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+    </LinearLayout>
+
 
     <TextView
         android:layout_width="match_parent"
