--- a/app/src/main/res/layout/list_reddit.xml
+++ b/app/src/main/res/layout/list_reddit.xml
@@ -10,11 +10,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?listPreferredItemHeight"
+        android:layout_height="?android:attr/listPreferredItemHeight"
         android:clickable="true"
         android:focusable="true"
         android:orientation="horizontal"
-        android:foreground="?selectableItemBackground">
+        android:foreground="?android:attr/selectableItemBackground">
 
         <TextView
             android:id="@+id/tv_reddit_name"
@@ -29,7 +29,7 @@
         <ImageView
 
             android:id="@+id/img_handle"
-            android:layout_width="?listPreferredItemHeight"
+            android:layout_width="?android:attr/listPreferredItemHeight"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|end"
             android:contentDescription="@string/text_handle_description"
