--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/main_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.activity.MainActivity">
+<!--
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.activity.MainActivity">
 
         <include layout="@layout/app_bar_layout" />
+-->
 
+<WebView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/login_webview"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
 
-    </android.support.design.widget.CoordinatorLayout>
+<!--
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+-->
+
+    <!--</android.support.design.widget.CoordinatorLayout>
+-->
