--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,10 @@
     <color name="colorAccent">@color/light_blue_A700</color>
     <color name="textColorPrimary">@color/black</color>
     <color name="textColorSecondary">@color/grey_600</color>
-    <color name="textColorBackground">@color/white</color>
+    <color name="textColorBackground">@color/black</color>
     <color name="textColorHyperLink">@color/light_blue_A700</color>
 
-    <color name="colorBackgroundItemSelected">@color/grey_600</color>
+    <color name="colorBackgroundItemSelected">#fff9c4</color>
     <color name="colorBackgroundItemNoSelected">@color/white</color>
 
     <color name="colorBackgroundImage">@color/white</color>
@@ -20,6 +20,7 @@
     <color name="light_blue_A700">#0091EA</color>
     <color name="blue_A700">#2962FF</color>
     <color name="grey_600">#757575</color>
+    <color name="deep_orange_A400">#FF3D00</color>
 
     <!-- Standard colors -->
     <color name="black">#000000</color>
