--- a/app/src/main/res/layout/activity_subreddit.xml
+++ b/app/src/main/res/layout/activity_subreddit.xml
@@ -1,18 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/submanage_container"
+    android:id="@+id/subreddit_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.MainActivity">
+    tools:context=".ui.activity.SubRedditActivity">
 
-    <include layout="@layout/app_bar_layout" />
+    <include layout="@layout/app_bar_layout"/>
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment_list_container"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
+        android:id="@+id/fragment_subreddit_container"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+       <!-- <include layout="@layout/inc_swipe" />
+-->
+    </FrameLayout>
 </android.support.design.widget.CoordinatorLayout>
