--- a/app/src/main/res/layout/list_manage_subreddit.xml
+++ b/app/src/main/res/layout/list_manage_subreddit.xml
@@ -1,54 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    card_view:cardBackgroundColor="@color/colorBackgroundCard"
-    card_view:cardCornerRadius="@dimen/list_card_radius"
-    card_view:cardElevation="@dimen/list_card_elevation"
-    card_view:cardUseCompatPadding="true">
+    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/listPreferredItemHeight"
-        android:clickable="true"
-        android:focusable="true"
-        android:orientation="horizontal"
-        android:foreground="?android:attr/selectableItemBackground">
+    <ImageView
+        android:id="@+id/img_handle"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical|start"
+        android:contentDescription="@string/text_handle_description"
+        android:paddingEnd="@dimen/base_navigation_padding_horizontal"
+        android:paddingStart="@dimen/base_navigation_padding_horizontal"
 
-        <ImageView
+        android:scaleType="center" />
 
-            android:id="@+id/img_handle"
-            android:layout_width="?android:attr/listPreferredItemHeight"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical|start"
-            android:contentDescription="@string/text_handle_description"
-            android:scaleType="center" />
+    <ImageView
 
-        <ImageView
-
-            android:id="@+id/img_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:contentDescription="@string/text_icon_description"
-            android:scaleType="centerCrop" />
+        android:id="@+id/img_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_vertical"
+        android:contentDescription="@string/text_icon_description"
+        android:paddingEnd="@dimen/base_navigation_padding_horizontal"
+        android:paddingStart="@dimen/base_navigation_padding_horizontal"
+        android:scaleType="centerCrop" />
 
 
-
-        <TextView
-            android:id="@+id/tv_reddit_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@android:color/black" />
-
+    <TextView
+        android:id="@+id/tv_reddit_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="8dp"
+        android:layout_weight="1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@android:color/black" />
 
 
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/img_manage_stars"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical|end"
+        android:contentDescription="@string/manage_stars_description"
+        android:paddingEnd="@dimen/base_navigation_padding_horizontal"
+        android:paddingStart="@dimen/base_navigation_padding_horizontal"
+        android:scaleType="center" />
 
+    <ImageView
+        android:id="@+id/img_manage_restore"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical|end"
+        android:contentDescription="@string/manage_stars_description"
+        android:paddingEnd="@dimen/base_navigation_padding_horizontal"
+        android:paddingStart="@dimen/base_navigation_padding_horizontal"
+        android:scaleType="center" />
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
+
