--- a/app/src/main/res/layout/list_subreddit.xml
+++ b/app/src/main/res/layout/list_subreddit.xml
@@ -21,12 +21,11 @@
         <TextView
             android:id="@+id/tv_title"
             style="@style/TextAppearance.AppCompat.Title"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:ellipsize="end"
+            android:layout_gravity="center"
             android:fontFamily="@font/roboto_regular"
-            android:gravity="center_vertical"
             android:maxLines="@integer/list_body_text_title"
             android:paddingBottom="@dimen/list_padding_vertical_title"
             android:paddingEnd="@dimen/list_padding_horizontal_title"
@@ -35,10 +34,10 @@
             android:textColor="@color/textColorPrimary" />
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:id="@+id/img_subreddit"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:id="@+id/img_subreddit" />
+            android:scaleType="centerCrop" />
 
         <LinearLayout
 
@@ -71,7 +70,7 @@
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
                 android:textColor="@color/textColorSecondary"
-                android:textStyle="normal"/>
+                android:textStyle="normal" />
 
             <TextView
                 android:id="@+id/tv_created_utc"
@@ -85,7 +84,7 @@
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
                 android:textColor="@color/textColorSecondary"
-                android:textStyle="normal"/>
+                android:textStyle="normal" />
 
 
         </LinearLayout>
@@ -111,7 +110,7 @@
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
                 android:textColor="@color/textColorSecondary"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_num_comments"
@@ -125,7 +124,7 @@
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
                 android:textColor="@color/textColorSecondary"
-                android:textStyle="normal"/>
+                android:textStyle="normal" />
         </LinearLayout>
 
 
