--- a/app/src/main/res/layout/list_subreddit.xml
+++ b/app/src/main/res/layout/list_subreddit.xml
@@ -17,26 +17,50 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
-        <TextView
-            android:id="@+id/tv_title"
-            style="@style/TextAppearance.AppCompat.Title"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:layout_gravity="center"
-            android:fontFamily="@font/roboto_regular"
-            android:maxLines="@integer/list_body_text_title"
-            android:paddingBottom="@dimen/list_padding_vertical_title"
-            android:paddingEnd="@dimen/list_padding_horizontal_title"
-            android:paddingStart="@dimen/list_padding_horizontal_title"
-            android:paddingTop="@dimen/list_padding_vertical_title"
-            android:textColor="@color/textColorPrimary" />
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/img_subreddit_small"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:scaleType="centerCrop"
+                android:visibility="visible"/>
+
+            <TextView
+                android:id="@+id/tv_title"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:ellipsize="end"
+                android:fontFamily="@font/roboto_regular"
+                android:maxLines="@integer/list_body_text_title"
+                android:paddingBottom="@dimen/list_padding_vertical_title"
+                android:paddingEnd="@dimen/list_padding_horizontal_title"
+                android:paddingStart="@dimen/list_padding_horizontal_title"
+                android:paddingTop="@dimen/list_padding_vertical_title" />
+
+
+
+        </LinearLayout>
+
 
         <ImageView
             android:id="@+id/img_subreddit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/list_padding_vertical_title"
+            android:paddingEnd="@dimen/list_padding_horizontal_title"
+            android:paddingStart="@dimen/list_padding_horizontal_title"
+            android:paddingTop="@dimen/list_padding_vertical_title"
             android:scaleType="centerCrop" />
 
         <LinearLayout
