--- a/app/src/main/res/layout/list_subreddit.xml
+++ b/app/src/main/res/layout/list_subreddit.xml
@@ -20,9 +20,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
 
             android:orientation="horizontal">
 
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:scaleType="centerCrop"
-                android:visibility="visible"/>
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/tv_title"
@@ -49,19 +49,33 @@
                 android:paddingTop="@dimen/list_padding_vertical_title" />
 
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_subreddit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/list_padding_vertical_title"
+                android:paddingEnd="@dimen/list_padding_horizontal_title"
+                android:paddingStart="@dimen/list_padding_horizontal_title"
+                android:paddingTop="@dimen/list_padding_vertical_title"
+                android:scaleType="centerCrop" />
+
+
+            <com.google.android.exoplayer2.ui.PlayerView
+                android:id="@+id/pv_subreddit"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:visibility="gone" />
+
 
         </LinearLayout>
 
-
-        <ImageView
-            android:id="@+id/img_subreddit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/list_padding_vertical_title"
-            android:paddingEnd="@dimen/list_padding_horizontal_title"
-            android:paddingStart="@dimen/list_padding_horizontal_title"
-            android:paddingTop="@dimen/list_padding_vertical_title"
-            android:scaleType="centerCrop" />
 
         <LinearLayout
 
