--- a/app/src/main/res/layout-land/list_subreddit.xml
+++ b/app/src/main/res/layout-land/list_subreddit.xml
@@ -20,9 +20,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
 
             android:orientation="horizontal">
 
@@ -30,8 +27,8 @@
                 android:id="@+id/img_subreddit_small"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:scaleType="centerCrop"
+                android:layout_gravity="center_vertical|start"
+                android:scaleType="centerInside"
                 android:visibility="visible" />
 
             <TextView
@@ -51,25 +48,18 @@
 
         </LinearLayout>
 
-        <LinearLayout
+
+        <ImageView
+            android:id="@+id/img_subreddit"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/list_padding_vertical_title"
+            android:paddingEnd="@dimen/list_padding_horizontal_title"
+            android:paddingStart="@dimen/list_padding_horizontal_title"
+            android:paddingTop="@dimen/list_padding_vertical_title"
+            android:scaleType="centerInside" />
 
-            <ImageView
-                android:id="@+id/img_subreddit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/list_padding_vertical_title"
-                android:paddingEnd="@dimen/list_padding_horizontal_title"
-                android:paddingStart="@dimen/list_padding_horizontal_title"
-                android:paddingTop="@dimen/list_padding_vertical_title"
-                android:scaleType="centerCrop" />
-
-<include layout="@layout/inc_player_container"/>
-
-        </LinearLayout>
-
+        <include layout="@layout/inc_player_container" />
 
         <LinearLayout
 
