--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,12 @@
 
     <color name="colorBackgroundImage">@color/white</color>
     <color name="colorBackgroundCard">@color/white</color>
+    <color name="light_green_A200">#B2FF59</color>
+
+    <color name="colorBackgroundPlayer">@color/black</color>
+
+    <color name="red_A400">#FF1744</color>
+
 
     <!-- Red -->
     <color name="red_500">#F44336</color>
