--- a/app/src/main/res/layout/inc_player_container.xml
+++ b/app/src/main/res/layout/inc_player_container.xml
@@ -2,18 +2,19 @@
 <LinearLayout android:id="@+id/id_player_layout"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:layout_marginBottom="16dp"
-    android:layout_marginTop="16dp"
+    android:background="@drawable/background_protection"
     android:gravity="center_vertical"
     android:orientation="vertical"
     android:visibility="gone"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/pv_subreddit"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
+        app:controller_layout_id="@layout/playback_control_view"
         android:visibility="gone" />
 
     <ProgressBar
