--- a/app/src/main/res/layout/list_subreddit.xml
+++ b/app/src/main/res/layout/list_subreddit.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/list_card_horiz_margin"
     android:clickable="true"
     android:focusable="true"
+    android:layout_marginBottom="@dimen/list_side_margin"
+    android:layout_marginTop="@dimen/list_side_margin"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardElevation="@dimen/list_card_elevation">
 
@@ -13,16 +14,12 @@
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-
             android:orientation="horizontal">
 
             <ImageView
@@ -30,9 +27,9 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:contentDescription="TODO"
                 android:scaleType="centerCrop"
-                android:visibility="visible"
-                android:contentDescription="TODO" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_title"
@@ -48,7 +45,6 @@
                 android:paddingStart="@dimen/list_padding_horizontal_title"
                 android:paddingTop="@dimen/list_padding_vertical_title" />
 
-
         </LinearLayout>
 
         <LinearLayout
@@ -60,14 +56,15 @@
                 android:id="@+id/img_subreddit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:contentDescription="TODO"
                 android:paddingBottom="@dimen/list_padding_vertical_title"
                 android:paddingEnd="@dimen/list_padding_horizontal_title"
                 android:paddingStart="@dimen/list_padding_horizontal_title"
                 android:paddingTop="@dimen/list_padding_vertical_title"
                 android:scaleType="centerCrop"
-                android:contentDescription="TODO" />
+                android:visibility="gone" />
 
-<include layout="@layout/inc_player_container"/>
+            <include layout="@layout/inc_player_container" />
 
         </LinearLayout>
 
