--- a/app/src/main/res/values-land/integers.xml
+++ b/app/src/main/res/values-land/integers.xml
@@ -4,5 +4,8 @@
     <integer name="list_body_text_title">4</integer>
     <integer name="list_body_text_subtitle">2</integer>
 
+    <integer name="icon_size_muted">30</integer>
+    <integer name="icon_size_volume">30</integer>
+
 
 </resources>
