--- a/app/src/main/res/values-sw600dp-land/integers.xml
+++ b/app/src/main/res/values-sw600dp-land/integers.xml
@@ -6,4 +6,8 @@
     <integer name="list_body_text_author">1</integer>
 
 
+    <integer name="icon_size_muted">30</integer>
+    <integer name="icon_size_volume">30</integer>
+
+
 </resources>
