--- a/app/src/main/res/values-sw600dp/integers.xml
+++ b/app/src/main/res/values-sw600dp/integers.xml
@@ -5,5 +5,9 @@
     <integer name="list_body_text_subtitle">1</integer>
     <integer name="list_body_text_author">1</integer>
 
+    <integer name="icon_size_muted">30</integer>
+    <integer name="icon_size_volume">30</integer>
+
+
 
 </resources>
