--- a/app/src/main/res/layout/inc_player_container.xml
+++ b/app/src/main/res/layout/inc_player_container.xml
@@ -1,39 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/id_player_layout"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
-    android:background="@drawable/background_protection"
+    android:layout_height="180dp"
     android:gravity="center_vertical"
-    android:orientation="vertical"
     android:visibility="gone">
 
 
-        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-            android:id="@+id/pv_subreddit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:visibility="gone"
-            app:controller_layout_id="@layout/playback_control_view" />
+    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        android:id="@+id/pv_subreddit"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        app:controller_layout_id="@layout/playback_control_view" />
+
+
+    <ImageView
+        android:id="@+id/image_subreddit_play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/background_protection_oval"
+        android:visibility="visible" />
+
 
     <ProgressBar
         android:id="@+id/exo_progressBar"
         style="?android:attr/progressBarStyleLarge"
-        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_error_player"
         style="?android:attr/textAppearanceMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/red_A400"
         android:visibility="gone" />
 
 
-</LinearLayout>
+</FrameLayout>
 
