--- a/app/src/main/res/values-land/integers.xml
+++ b/app/src/main/res/values-land/integers.xml
@@ -4,6 +4,7 @@
     <integer name="list_body_text_title">4</integer>
     <integer name="list_body_text_subtitle">2</integer>
     <integer name="icon_size_share">30</integer>
+    <integer name="icon_card_bottom">25</integer>
 
     <integer name="icon_size_fullscreen">30</integer>
     <integer name="icon_size_exit_fullscreen">30</integer>
