--- a/app/src/main/res/values-sw600dp-land/integers.xml
+++ b/app/src/main/res/values-sw600dp-land/integers.xml
@@ -5,6 +5,7 @@
     <integer name="list_body_text_subtitle">1</integer>
     <integer name="list_body_text_author">1</integer>
     <integer name="icon_size_share">30</integer>
+    <integer name="icon_card_bottom">25</integer>
 
     <integer name="icon_size_fullscreen">30</integer>
     <integer name="icon_size_exit_fullscreen">30</integer>
