--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -8,6 +8,7 @@
     <integer name="anim_duration_long">600</integer>
 
     <integer name="icon_size_share">30</integer>
+    <integer name="icon_card_bottom">25</integer>
     <integer name="icon_size_fullscreen">30</integer>
     <integer name="icon_size_exit_fullscreen">30</integer>
     <integer name="icon_size_muted">25</integer>
