--- a/app/src/main/res/layout-land/list_subreddit_detail.xml
+++ b/app/src/main/res/layout-land/list_subreddit_detail.xml
@@ -101,6 +101,8 @@
                         android:paddingBottom="@dimen/list_padding_vertical_author"
                         android:paddingEnd="@dimen/list_padding_horizontal_author"
                         android:paddingStart="@dimen/list_padding_horizontal_author"
+                        android:autoLink="web"
+                        android:clickable="true"
                         android:textColor="@color/textColorSecondary"/>
 
                 </LinearLayout>
