--- a/app/src/main/res/layout/list_subreddit.xml
+++ b/app/src/main/res/layout/list_subreddit.xml
@@ -176,80 +176,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="8dp"
-            android:orientation="horizontal"
-            android:weightSum="5">
-
-
-            <ImageButton
-                android:id="@+id/image_vote_up"
-                style="@style/Base.Widget.AppCompat.ImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:contentDescription="TODO"
-                android:ellipsize="end"
-                android:paddingBottom="@dimen/list_padding_vertical_author"
-                android:paddingEnd="@dimen/list_padding_horizontal_author"
-                android:paddingStart="@dimen/list_padding_horizontal_author" />
-
-            <ImageButton
-                android:id="@+id/image_vote_down"
-                style="@style/Base.Widget.AppCompat.ImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:contentDescription="TODO"
-                android:paddingBottom="@dimen/list_padding_vertical_author"
-                android:paddingEnd="@dimen/list_padding_horizontal_author"
-                android:paddingStart="@dimen/list_padding_horizontal_author" />
-
-
-            <ImageButton
-                android:id="@+id/image_prefer_stars"
-                style="@style/Base.Widget.AppCompat.ImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:contentDescription="TODO"
-                android:paddingBottom="@dimen/list_padding_vertical_author"
-                android:paddingEnd="@dimen/list_padding_horizontal_author"
-                android:paddingStart="@dimen/list_padding_horizontal_author" />
-
-            <ImageButton
-                android:id="@+id/image_show_comments"
-                style="@style/Base.Widget.AppCompat.ImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:contentDescription="TODO"
-                android:paddingBottom="@dimen/list_padding_vertical_author"
-                android:paddingEnd="@dimen/list_padding_horizontal_author"
-                android:paddingStart="@dimen/list_padding_horizontal_author" />
-
-
-            <ImageButton
-                android:id="@+id/image_open_browser"
-                style="@style/Base.Widget.AppCompat.ImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:contentDescription="TODO"
-                android:paddingBottom="@dimen/list_padding_vertical_author"
-                android:paddingEnd="@dimen/list_padding_horizontal_author"
-                android:paddingStart="@dimen/list_padding_horizontal_author" />
-
-
-        </LinearLayout>
-
+        <include layout="@layout/inc_select_bottom"/>
 
     </LinearLayout>
 
