--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -109,6 +109,8 @@
             </LinearLayout>
         </LinearLayout>
 
+        <include layout="@layout/inc_select_bottom"/>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
